@@ -3,6 +3,8 @@ package com.tinkerpop.pipes.transform;
 import com.tinkerpop.blueprints.Direction;
 import com.tinkerpop.pipes.util.PipeHelper;
 
+import java.util.Arrays;
+
 /**
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  */
@@ -12,7 +14,13 @@ public class InEdgesPipe extends VerticesEdgesPipe {
         super(Direction.IN, labels);
     }
 
+    public InEdgesPipe(final int branchFactor, final String... labels) {
+        super(Direction.IN, branchFactor, labels);
+    }
+
     public String toString() {
-        return PipeHelper.makePipeString(this, this.labels);
+        return (this.branchFactor == Integer.MAX_VALUE) ?
+                PipeHelper.makePipeString(this, Arrays.asList(this.labels)) :
+                PipeHelper.makePipeString(this, this.branchFactor, Arrays.asList(this.labels));
     }
 }
